--- a/data-collection/indeed_scraper.ipynb
+++ b/data-collection/indeed_scraper.ipynb
@@ -88,7 +88,8 @@
     "\n",
     "joblist = []    \n",
     "\n",
-    "for i in range(0, 50, 10):\n",
+    "# At the time of this project, only 24 pages of results available\n",
+    "for i in range(0, 220, 10):\n",
     "    c = extract(0)\n",
     "    transform(c)\n",
     "\n",
